--- a/AlveoEnergy/package.json
+++ b/AlveoEnergy/package.json
@@ -12,18 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.1.0",
+    "@angular/cdk": "^7.2.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
     "@angular/forms": "~7.1.0",
     "@angular/http": "^7.1.1",
+    "@angular/material": "^7.2.0",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "DlhSoft.GanttChartHyperLibrary": "http://DlhSoft.com/Packages/DlhSoft.GanttChartHyperLibrary.tar",
     "angular-in-memory-web-api": "^0.7.0",
+    "bootstrap": "^4.5.2",
     "core-js": "^2.5.4",
     "dhtmlx-gantt": "^6.1.1",
+    "jquery": "^3.5.1",
+    "ngx-accordion-table": "^1.0.10",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
