--- a/AlveoEnergy/package.json
+++ b/AlveoEnergy/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@zxing/ngx-scanner": "^3.0.1",
     "angular-in-memory-web-api": "^0.7.0",
     "bootstrap": "^4.5.2",
     "core-js": "^2.5.4",
