added orders (blank)

--- a/AlveoEnergy/package.json
+++ b/AlveoEnergy/package.json
@@ -11,20 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^9.x.x",
-    "@angular/material": "~9.2.4",
     "@angular/animations": "~9.0.6",
+    "@angular/cdk": "^9.x.x",
     "@angular/common": "~9.0.6",
     "@angular/compiler": "~9.0.6",
     "@angular/core": "~9.0.6",
     "@angular/forms": "~9.0.6",
     "@angular/localize": "~9.0.6",
+    "@angular/material": "~9.2.4",
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "@zxing/ngx-scanner": "^3.0.1",
     "core-js": "^2.5.4",
     "dhtmlx-gantt": "^6.1.1",
+    "google-spreadsheet": "^3.0.13",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
