Add file log the server

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ AlveoManagementServer/AlveoManagementServer/obj/
 AlveoManagementServer/AlveoManagementCommon/obj/
 
 AlveoManagementServer/AlveoManagementCommon/bin/
+
+AlveoManagementServer/AlveoManagementServer/Logs/
