--- a/AlveoManagementServer/AlveoManagementServer/AlveoManagementServer.csproj
+++ b/AlveoManagementServer/AlveoManagementServer/AlveoManagementServer.csproj
@@ -6,6 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="My First Project-814e97df534e.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="My First Project-814e97df534e.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="3.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
@@ -13,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AlveoManagementCommon\AlveoManagementCommon.csproj" />
+    <ProjectReference Include="..\GoogleSheets\GoogleSheets.csproj" />
   </ItemGroup>
 
 
