--- a/AlveoEnergy/package.json
+++ b/AlveoEnergy/package.json
@@ -27,6 +27,7 @@
     "dhtmlx-gantt": "^6.1.1",
     "google-spreadsheet": "^3.0.13",
     "jquery": "^3.5.1",
+    "jspdf": "^2.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -38,6 +39,7 @@
     "@angular/language-service": "~9.0.6",
     "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^12.12.51",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
