--- a/AlveoEnergy/package.json
+++ b/AlveoEnergy/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "dhtmlx-gantt": "^6.1.1",
     "google-spreadsheet": "^3.0.13",
+    "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.5.1",
     "jspdf": "^2.1.1",
     "rxjs": "~6.5.4",
@@ -39,7 +40,6 @@
     "@angular/language-service": "~9.0.6",
     "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jspdf": "^1.3.3",
     "@types/node": "^12.12.51",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
