--- a/AlveoEnergy/package.json
+++ b/AlveoEnergy/package.json
@@ -23,12 +23,14 @@
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "@zxing/ngx-scanner": "^3.0.1",
+    "angular2-qrcode": "^2.0.3",
     "core-js": "^2.5.4",
     "dhtmlx-gantt": "^6.1.1",
     "google-spreadsheet": "^3.0.13",
     "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.5.1",
     "jspdf": "^2.1.1",
+    "pdfmake": "^0.1.68",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
