--- a/AlveoEnergy/package.json
+++ b/AlveoEnergy/package.json
@@ -33,6 +33,7 @@
     "pdfmake": "^0.1.68",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "xlsx": "^0.16.7",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
