--- a/AlveoManagementServer/AlveoManagementServer/appsettings.json
+++ b/AlveoManagementServer/AlveoManagementServer/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionSettings": {
+    "DataStoreType": 1,
+    "ConnectionString": "server=localhost;port=3306",
+    "DBName": "AlveoWaterManagement",
+    "UserName": "",
+    "Password": ""
+  }
 }
