Fix SQLite to C# data type parsing

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ AlveoManagementServer/GoogleSheets/bin/
 AlveoManagementServer/GoogleSheets/obj/
 
 AlveoEnergy/debug.log
+
+AlveoManagementServer/SQLiteProvider/bin/
+
+AlveoManagementServer/SQLiteProvider/obj/
