Fix "Column" does not exist error and update Git Ignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,7 @@ AlveoEnergy/debug.log
 AlveoManagementServer/SQLiteProvider/bin/
 
 AlveoManagementServer/SQLiteProvider/obj/
+
+AlveoManagementServer/DBProviderBase/obj/
+
+AlveoManagementServer/DBProviderBase/bin/
