--- a/AlveoManagementServer/AlveoManagementCommon/AlveoManagementCommon.csproj
+++ b/AlveoManagementServer/AlveoManagementCommon/AlveoManagementCommon.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <FileUpgradeFlags>40</FileUpgradeFlags>
+    <UpgradeBackupLocation>C:\Users\Tspan\Documents\Git\AlveoManagement\AlveoManagementServer\Backup\AlveoManagementCommon\</UpgradeBackupLocation>
+    <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="System.Data.SQLite" Version="1.0.113.1" />
   </ItemGroup>
-
 </Project>
